# rathena

./: MARIADB_OPTIMIZATION_PLAN.md  README.md  test_threading.cpp  test_threading_standalone  test_threading_standalone.cpp
conf/: battle_athena.conf
conf/battle/: ai_client.conf  gamemode.conf  threading.conf
doc/: BUILD_RESULTS.md  DOCUMENTATION_INDEX.md  MULTITHREADING_DEPLOYMENT.md  MULTITHREADING_SUMMARY.md  PROJECT_SUMMARY.md  README.md  ai_client.md  db_async_examples.md  threading.md  verify_links.sh
doc/ai-sidecar/: API_REFERENCE.md
doc/deployment/: CLOUDFLARE_TUNNEL.md  DEPLOYMENT_GUIDE.md  QUICK_START.md
doc/integration/: COMPLIANCE_REPORT.md  COMPLIANCE_STATUS.md  INTEGRATION_COMPLETE.md  VALIDATION_REPORT.md
npc/custom/: ai_test_npc.txt
sql-files/mariadb/: README.md  add_performance_indexes.sql  analyze_indexes.sql  health_check.sql  maintenance.sql  mariadb_optimized.cnf  migrate_phased.sh  migrate_to_aria.sql  migrate_to_innodb.sql  (+4 more)
src/: CMakeLists.txt
src/ai_client/: CMakeLists.txt  README.md  ai_client.cpp  ai_client.hpp  generate_proto.sh  test_client.cpp
src/ai_client/protos/: ai_service.proto
src/common/: CMakeLists.txt  Makefile.in  common.vcxproj  common.vcxproj.filters  core.cpp  core.hpp  gamemode.cpp  gamemode.hpp  sql.cpp  sql.hpp  threading.cpp  threading.hpp
src/map/: CMakeLists.txt  Makefile.in  achievement.cpp  battle.cpp  battle.hpp  map.cpp  mob.cpp  mob.hpp  path.cpp  pc.cpp  script.cpp
src/test/: Makefile  test_db_async.cpp  test_threading_runtime  test_threading_runtime.cpp
tools/: test_tunnel.sh
